# stackfybot

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
src/: __main__.py  app.py  configs.py  database.py
src/interfaces/api/: __init__.py  account.py  health.py  middlewares.py  quote.py  schemas.py  trade.py  transactions.py
src/interfaces/chat/: notify.py  purchase.py  resume.py  sell.py  started.py  telegram.py
src/interfaces/chat/extensions/: filters_handlers.py  message_handlers.py  middlewares_handlers.py  query_handlers.py
src/interfaces/chat/moderator/: __init__.py  bank.py  moderator.py  nfse.py  notify.py  purchase.py  sell.py  transaction.py  user.py
src/lib/: bitfinex.py  swap.py
src/middlewares/: features.py
src/services/: bank.py  bitfinex.py  bitpreco.py  coinos.py  features.py  firebase.py  helpers.py  inter.py  lightning.py  quote.py  redis.py  swap.py
